@@ -155,13 +155,12 @@ def lattice_conjugate(tensor):
 
 @np.vectorize
 def lattice_dot(tensor_1, tensor_2):
-    return tensor_1.conjugate(default_is_physics_edge=True).contract(tensor_2,
-                                                                     {(name, name) for name in tensor_1.names})
+    return tensor_1.contract(tensor_2, {(name, name) for name in tensor_1.names}).storage[0]
 
 
 def lattice_dot_sum(tensors_1, tensors_2):
     dot = lattice_dot(tensors_1, tensors_2)
-    return complex(np.sum(dot)).real
+    return np.sum(dot)
 
 
 def lattice_update(tensors_1, tensors_2):
