@@ -10,6 +10,7 @@
 *** Removed
 *** Fixed
 + *tetragono*: Fix a problem when calling =gm_data_load= in tetragono shell.
++ *tetragono*: Fix a bug in calculating the natural gradient of a complex tensor network state.
 
 ** [[https://github.com/hzhangxyz/TAT/compare/v0.2.17...v0.2.18][v0.2.18]] - 2022-06-28
 
